@startuml
'https://plantuml.com/class-diagram
class Utilidades
class ManejadorDeRespuestas
class ManejadorDeMensajes
class ManejadorPalabrasClave

class OptimusPrime {
    - Utilidades utilidades
    - int estado_de_animo
    --
    + OptimusPrime()
    + void responder(mensaje : string)
    + void sugerir_fusion()
    + void cambiar_animo(animo : string)
}

' Relaciones
OptimusPrime --> Utilidades : "usa"
OptimusPrime --> ManejadorDeMensajes : "depende"
OptimusPrime --> ManejadorPalabrasClave : "depende"
OptimusPrime --> ManejadorDeRespuestas : "depende"
' depende porque no son atributos de optimus si no que los uso en su implementación
@enduml